k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iit-website-staging
  labels:
    app.kubernetes.io/managed-by: argocd
    environment: staging
